# ligen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ligen/: main.py  parser.py
ligen/templates/: __init__.py  apache_2.py  ggpl2.py  mit.py  unlicense.py
